--- a/mirr.html
+++ b/mirr.html
@@ -5,6 +5,7 @@
   <title>MIRR (Modified Internal Rate of Return) Calculator | Finance → Investment</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="description" content="Professional MIRR calculator with PV of negative cash flows at finance rate, terminal value of positive cash flows at reinvestment rate, annual/per-period options, formulas, worked example, and FAQ."/>
+  <meta name="author" content="Ugo Candido"/>
   <link rel="canonical" href="https://calcdomain.com/mirr.html"/>
   <meta name="theme-color" content="#0b3d69"/>
   <meta name="robots" content="index, follow"/>
@@ -16,6 +17,7 @@
   <!-- Tailwind & Fonts -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <script src="search.js" defer></script>
   <style>
     body { font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; }
     .container { max-width: 1120px; }
@@ -34,12 +36,13 @@
     .formula-box mjx-container { overflow-x:auto; }
     .flows thead th { text-align:left; color:#64748b; font-weight:600; border-bottom:1px solid #e5e7eb; padding-bottom:.5rem; }
     .flows td { border-bottom:1px dashed #e5e7eb; padding:.5rem 0; }
-    .btn { display:inline-flex; align-items:center; justify-content:center; gap:.5rem; padding:.5rem 1rem; border-radius:.5rem; border:1px solid; font-weight:600; min-height:44px; }
+    .btn { display:inline-flex; align-items:center; justify-content:center; gap:.5rem; padding:.5rem 1rem; border-radius:.5rem; border:1px solid transparent; font-weight:600; min-height:44px; transition:background-color .2s ease, color .2s ease, border-color .2s ease; }
     .btn-primary { background:#2563eb; color:#fff; border-color:#2563eb; }
     .btn-secondary { background:#fff; color:#1d4ed8; border-color:#2563eb; }
     .btn-ghost { background:transparent; color:#334155; border-color:#e5e7eb; }
     .btn-danger { background:#fff; color:#dc2626; border-color:#ef4444; }
-    .result-pill { font-size:.875rem; font-weight:600; padding:.25rem .5rem; border-radius:.5rem; }
+    .btn:hover { filter:brightness(.95); }
+    .result-pill { display:inline-flex; align-items:center; font-size:.875rem; font-weight:600; padding:.25rem .75rem; border-radius:9999px; }
     .table th, .table td { border:1px solid #e5e7eb; padding:.5rem; }
     .sr-only-focusable:focus { position: static; width: auto; height: auto; margin: 0; overflow: visible; clip: auto; }
   </style>
@@ -52,6 +55,19 @@
     };
   </script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://calcdomain.com/"},
+      {"@type":"ListItem","position":2,"name":"Finance","item":"https://calcdomain.com/finance.html"},
+      {"@type":"ListItem","position":3,"name":"Investment","item":"https://calcdomain.com/subcategories/finance-investment.html"},
+      {"@type":"ListItem","position":4,"name":"MIRR (Modified Internal Rate of Return) Calculator","item":"https://calcdomain.com/mirr.html"}
+    ]
+  }
+  </script>
 
   <!-- Structured Data (WebPage + HowTo + FAQ) -->
   <script type="application/ld+json">
@@ -136,18 +152,18 @@
         </div>
         <div class="space-y-2">
           <a href="search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
-          <a href="#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+          <a href="index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
         </div>
       </div>
     </nav>
   </header>
 
   <!-- Main -->
-  <div id="main" class="container mx-auto px-4 py-8">
+  <main class="container mx-auto px-4 py-8">
     <div class="flex flex-col lg:flex-row gap-8">
 
       <!-- Left: Calculator & Content -->
-      <main class="w-full lg:w-2/3">
+      <section class="w-full lg:w-2/3">
         <!-- Breadcrumbs & EEAT -->
         <nav class="text-sm mb-4 text-gray-600" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
@@ -351,7 +367,7 @@
           <hr/>
           <p class="text-sm text-gray-600"><strong>Authorship:</strong> Tool developed by Ugo Candido. Content reviewed by Finance Content Editor. <strong>Last accuracy review:</strong> <time id="reviewDate"></time>.</p>
         </article>
-      </main>
+      </section>
 
       <!-- Right: Sidebar -->
       <aside class="w-full lg:w-1/3">
@@ -371,7 +387,7 @@
         </div>
       </aside>
     </div>
-  </div>
+  </main>
 
   <!-- Footer -->
   <footer class="bg-white border-t mt-12">
@@ -625,6 +641,10 @@
       els.frequency.value = '1';
       loadExample();
       render();
+
+      const toggle = document.getElementById('mobile-menu-toggle');
+      const menu = document.getElementById('mobile-menu');
+      toggle?.addEventListener('click', () => { menu?.classList.toggle('hidden'); });
     });
   </script>
 </body>
