--- a/compound-interest-calculator.html
+++ b/compound-interest-calculator.html
@@ -470,7 +470,7 @@
     <div class="container mx-auto px-6 py-8 text-center text-gray-600">
       <p>&copy; 2025 CalcDomain. All Rights are Reserved.</p>
     </div>
-  </footer>https://calcdomain.com/subcategories/finance-investment.html
+  </footer>
 
   <!-- Calculator Logic -->
   <script>
