--- a/gallons-to-liters.html
+++ b/gallons-to-liters.html
@@ -76,6 +76,7 @@
             <div class="flex justify-between items-center">
                 <a href="index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
 
+                <!-- Desktop Search Bar -->
                 <div class="w-full max-w-md hidden md:block mx-8">
                     <div class="relative">
                         <input type="search" id="search-input" placeholder="Search for a calculator..."
@@ -90,18 +91,25 @@
                     </div>
                 </div>
 
-                <button id="mobile-menu-toggle" class="md:hidden p-2" aria-label="Open menu">
+                <div class="hidden md:flex items-center space-x-6 text-sm">
+                    <a href="search.html" class="text-gray-700 hover:text-blue-600">Advanced Search</a>
+                    <a href="index.html#categories" class="text-gray-700 hover:text-blue-600">Categories</a>
+                </div>
+
+                <!-- Mobile Menu Button -->
+                <button id="mobile-menu-toggle" class="md:hidden p-2 rounded-lg hover:bg-gray-100" aria-label="Open menu">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
                     </svg>
                 </button>
             </div>
 
-            <div id="mobile-menu" class="hidden md:hidden mt-4 pb-4 border-t pt-4">
-                <input type="search" id="mobile-search-input" placeholder="Search for a calculator..."
-                       class="w-full py-2 px-4 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500 mb-4"
-                       autocomplete="off">
-                <div id="mobile-search-results" class="bg-white border border-gray-200 rounded-lg shadow-lg hidden max-h-96 overflow-y-auto"></div>
+            <!-- Mobile Menu -->
+            <div id="mobile-menu" class="md:hidden mt-4 hidden">
+                <div class="space-y-2">
+                    <a href="search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
+                    <a href="index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+                </div>
             </div>
         </nav>
     </header>
@@ -273,11 +281,11 @@
         </div>
     </footer>
 
-    <!-- Mobile Menu Toggle Script -->
+    <!-- Mobile Menu Script -->
     <script>
-        document.getElementById('mobile-menu-toggle').addEventListener('click', function() {
-            const mobileMenu = document.getElementById('mobile-menu');
-            mobileMenu.classList.toggle('hidden');
+        document.getElementById('mobile-menu-toggle')?.addEventListener('click', () => {
+            const menu = document.getElementById('mobile-menu');
+            menu?.classList.toggle('hidden');
         });
 
         function convertGallonsToLiters() {
