--- a/kelvin-to-celsius.html
+++ b/kelvin-to-celsius.html
@@ -55,6 +55,7 @@
             <div class="flex justify-between items-center">
                 <a href="index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
 
+                <!-- Desktop Search Bar -->
                 <div class="w-full max-w-md hidden md:block mx-8">
                     <div class="relative">
                         <input type="search" id="search-input" placeholder="Search for a calculator..."
@@ -69,7 +70,13 @@
                     </div>
                 </div>
 
-                <button id="mobile-menu-toggle" class="md:hidden p-2" aria-label="Open menu">
+                <div class="hidden md:flex items-center space-x-6 text-sm">
+                    <a href="search.html" class="text-gray-700 hover:text-blue-600">Advanced Search</a>
+                    <a href="index.html#categories" class="text-gray-700 hover:text-blue-600">Categories</a>
+                </div>
+
+                <!-- Mobile Menu Button -->
+                <button id="mobile-menu-toggle" class="md:hidden p-2 rounded-lg hover:bg-gray-100" aria-label="Open menu">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
                     </svg>
