--- a/kelvin-to-celsius.html
+++ b/kelvin-to-celsius.html
@@ -83,11 +83,12 @@
                 </button>
             </div>
 
-            <div id="mobile-menu" class="hidden md:hidden mt-4 pb-4 border-t pt-4">
-                <input type="search" id="mobile-search-input" placeholder="Search for a calculator..."
-                       class="w-full py-2 px-4 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500 mb-4"
-                       autocomplete="off">
-                <div id="mobile-search-results" class="bg-white border border-gray-200 rounded-lg shadow-lg hidden max-h-96 overflow-y-auto"></div>
+            <!-- Mobile Menu -->
+            <div id="mobile-menu" class="md:hidden mt-4 hidden">
+                <div class="space-y-2">
+                    <a href="search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
+                    <a href="index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+                </div>
             </div>
         </nav>
     </header>
@@ -254,11 +255,11 @@
         </div>
     </footer>
 
-    <!-- Mobile Menu Toggle Script -->
+    <!-- Mobile Menu Script -->
     <script>
-        document.getElementById('mobile-menu-toggle').addEventListener('click', function() {
-            const mobileMenu = document.getElementById('mobile-menu');
-            mobileMenu.classList.toggle('hidden');
+        document.getElementById('mobile-menu-toggle')?.addEventListener('click', () => {
+            const menu = document.getElementById('mobile-menu');
+            menu?.classList.toggle('hidden');
         });
 
         function convertKelvinToCelsius() {
