--- a/btu-to-calories.html
+++ b/btu-to-calories.html
@@ -49,51 +49,47 @@
 </head>
 <body class="bg-gray-50">
     <!-- Header -->
-    <header class="bg-blue-600 text-white sticky top-0 z-50 shadow-md">
-        <div class="container mx-auto px-4">
-            <div class="flex items-center justify-between py-4">
-                <div class="flex items-center space-x-4">
-                    <a href="/" class="text-2xl font-bold hover:text-blue-200 transition-colors">CalcDomain</a>
+    <header class="bg-white shadow-sm sticky top-0 z-50">
+        <nav class="container mx-auto px-4 lg:px-6 py-4">
+            <div class="flex justify-between items-center">
+                <a href="index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
+
+                <div class="w-full max-w-md hidden md:block mx-8">
+                    <div class="relative">
+                        <input
+                            type="search"
+                            id="search-input"
+                            placeholder="Search for a calculator..."
+                            class="w-full py-2 px-4 pr-10 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500"
+                            autocomplete="off"
+                        >
+                        <svg class="w-5 h-5 absolute right-4 top-1/2 -translate-y-1/2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+                        </svg>
+                        <div id="search-results" class="absolute top-full left-0 right-0 hidden"></div>
+                    </div>
                 </div>
 
                 <div class="hidden md:flex items-center space-x-6">
-                    <div class="relative search-container">
-                        <input
-                            type="text"
-                            id="search-input"
-                            placeholder="Search calculators..."
-                            class="pl-10 pr-4 py-2 rounded-lg text-gray-800 w-64 focus:outline-none focus:ring-2 focus:ring-blue-300"
-                        />
-                        <svg class="absolute left-3 top-2.5 w-5 h-5 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
-                        </svg>
-                        <div id="search-results" class="hidden absolute top-full left-0 right-0 mt-2 bg-white rounded-lg shadow-lg max-h-96 overflow-y-auto z-50"></div>
-                    </div>
-                    <a href="/advanced-search.html" class="hover:text-blue-200 transition-colors">Advanced Search</a>
-                    <a href="/categories.html" class="hover:text-blue-200 transition-colors">Categories</a>
+                    <a href="search.html" class="text-gray-700 hover:text-blue-600">Advanced Search</a>
+                    <a href="index.html#categories" class="text-gray-700 hover:text-blue-600">Categories</a>
                 </div>
 
-                <button id="mobile-menu-button" class="md:hidden p-2 rounded-lg hover:bg-blue-700 transition-colors">
+                <button id="mobile-menu-toggle" class="md:hidden p-2">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
                     </svg>
                 </button>
             </div>
-        </div>
-    </header>
 
-    <!-- Mobile Menu -->
-    <div id="mobile-menu" class="hidden md:hidden bg-blue-700 text-white">
-        <div class="container mx-auto px-4 py-4 space-y-4">
-            <input
-                type="text"
-                placeholder="Search calculators..."
-                class="w-full px-4 py-2 rounded-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-blue-300"
-            />
-            <a href="/advanced-search.html" class="block hover:text-blue-200 transition-colors">Advanced Search</a>
-            <a href="/categories.html" class="block hover:text-blue-200 transition-colors">Categories</a>
-        </div>
-    </div>
+            <div id="mobile-menu" class="md:hidden mt-4 hidden">
+                <div class="space-y-2">
+                    <a href="search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
+                    <a href="index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+                </div>
+            </div>
+        </nav>
+    </header>
 
     <!-- Main Content -->
     <main class="container mx-auto px-4 py-8">
